package onion.lifeproducts.rms.application;

public interface ImpactCalculationStrategy {}
