package onion.lifeproducts.rms.application;

public class RecyclingService {}
