package onion.lifeproducts.rms.domain;

public class ImpactReport {}
