package onion.lifeproducts.rms.domain;

public class Material {}
