package onion.lifeproducts.rms.domain;

public class ProductCategory {}
