@startuml

' RMS stands for Recycling Management System
' package onion.lifeproducts.rms {

	class Product {
		- Integer id
		- String name
		- ProductCategory category
		- Material[] materials
		- LocalDateTime manufactureDate
		- LocalDateTime endDate
		
		' + getId(): Integer
		' + getName(): String
		' + getCategory(): String
		' + getManufactureDate(): LocalDateTime
		' + getEndDate(): LocalDateTime
		' + getMaterials(): Material[]
		' + setId(Integer id): void
		' + setName(String name): void
		' + setCategory(String category): void
		' + setManufactureDate(LocalDateTime manufactureDate): void
		' + setEndDate(LocalDateTime endDate): void
		' + setMaterials(Material[] materials): void

	}

	class Material {
		- String name
		- float burnAtmosphereImpact
		- float decayAtmosphereImpact
		- float decayGroundImpact
		- LocalDateTime decayTime
		- RecyclingGuidance recyclingInstruction

		' + getName(): String
		' + getBurnAtmosphereImpact(): float
		' + getDecayAtmosphereImpact(): float
		' + getDecayGroundImpact(): float
		' + getDecayTime(): LocalDateTime
		' + getRecyclingInstruction(): String
		' + setName(String name): void
		' + setBurnAtmosphereImpact(float burnAtmosphereImpact): void
		' + setDecayAtmosphereImpact(float decayAtmosphereImpact): void
		' + setDecayGroundImpact(float decayGroundImpact): void
		' + setDecayTime(LocalDateTime decayTime): void
		' + setRecyclingInstruction(RecyclingGuidance recyclingInstruction): void

	}

	class ProductCategory {
		- String type
	}

	class RecyclingGuidance {
		- String guide
	}

	class RecyclingService {

	}

	class ImpactReport {

	}

	class ImpactCalculationStrategy {

	}


' }

Product "0..*" *-- "1..*" Material : uses

Product "1..1" o-- "0..1" ImpactCalculationStrategy : uses

Product "1..1" *-- "1..1" ProductCategory : has
Product "1..1" --> "0..*" ImpactReport : generates

Material "1..1" *-- "1..1" RecyclingGuidance : has

RecyclingGuidance "1..1" *-- "1..1" RecyclingService : has

@enduml
